--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@ python $fastq input_file.fastq -maskAll -intervalStart=1 -intervalEnd=5
 <pre><code>python $fastq input_file.fastq -mottTrimAll -limitValue=0.65
 </code></pre>
       </section>
+      <p></p>
       <footer>
         <p>This project is maintained by <a href="https://github.com/Jverma">Jverma</a></p>
+        <p>Janu Verma blogs at <a href="http://januverma.wordpress.com/"></a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
